@@ -130,7 +130,7 @@ class Attachment(ModelSQL, ModelView):
             else:
                 try:
                     with open(filename, 'rb') as file_p:
-                        value = buffer(file_p.read())
+                        value = fields.Binary.cast(file_p.read())
                 except IOError:
                     pass
         return value
